--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,22 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body{
+body {
+    background: green;
+}
+
+.card {
+    align-items: center;
     background: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 20px auto;
+    padding: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#numero {
+    color: black;
 }
